# vomsxrd

./: CMakeLists.txt
cmake/: vomsxrdCommon.cmake
packaging/: makesrpm.sh  vomsxrd.spec.in
src/: vomsxrd.cmake
